fixed post overflows.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,3 +11,5 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 .menu_link:active{text-decoration:none;cursor:pointer;text-shadow:0 1px 0 #3d768a;font-weight:bold;padding:13px 32px;color:#0e1113}
 #mySidebar{display:none;z-index:4;width:25%;min-width:300px}
 .top_menu{max-width:1200px;margin:0 auto;border-radius:10px}
+.page-section{max-width:1200px;text-align:center; margin: 0 auto;}
+/*.timeline_display{display:compact}*/
